<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:padding="@dimen/margin_normal">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/icon_default_normal"
        android:layout_height="@dimen/icon_default_normal"
        android:src="@drawable/compass" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button android:id="@+id/task" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_person"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"/>


</android.support.constraint.ConstraintLayout>